--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weavolution - Transforming Textile Waste Into Opportunity</title>
-    <meta name="description" content="Weavolution tackles Egypt's textile waste problem by transforming discarded fabrics into eco-friendly products. Join the sustainable revolution." />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+
+  <!--* Developed by @GBOY
+ ▄▄▄▄▄▄▄ ▄▄▄▄▄▄▄ ▄▄▄▄▄▄▄ ▄▄   ▄▄
+█       █  ▄    █       █  █ █  █
+█   ▄▄▄▄█ █▄█   █   ▄   █  █▄█  █
+█  █  ▄▄█       █  █ █  █       █
+█  █ █  █  ▄   ██  █▄█  █▄     ▄█
+█  █▄▄█ █ █▄█   █       █ █   █
+█▄▄▄▄▄▄▄█▄▄▄▄▄▄▄█▄▄▄▄▄▄▄█ █▄▄▄█    
+-->
+
+
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Weavolution - Transforming Textile Waste Into Opportunity</title>
+  <meta name="description"
+    content="Weavolution tackles Egypt's textile waste problem by transforming discarded fabrics into eco-friendly products. Join the sustainable revolution." />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
