--- a/index.html
+++ b/index.html
@@ -12,12 +12,34 @@
 █  █▄▄█ █ █▄█   █       █ █   █
 █▄▄▄▄▄▄▄█▄▄▄▄▄▄▄█▄▄▄▄▄▄▄█ █▄▄▄█    
 -->
-<title>Weavolution - Transforming Textile Waste Into Opportunity</title>
+  <title>Weavolution - Transforming Textile Waste Into Opportunity</title>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Weavolution tackles Egypt's textile waste problem by transforming discarded fabrics into eco-friendly products. Join the sustainable revolution." />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://weavolution.vercel.app/" />
+  <meta property="og:title" content="Weavolution - Transforming Textile Waste Into Opportunity" />
+  <meta property="og:description"
+    content="Weavolution tackles Egypt's textile waste problem by transforming discarded fabrics into eco-friendly products. Join the sustainable revolution." />
+  <meta property="og:image" content="https://weavolution.vercel.app/og-image.jpg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://weavolution.vercel.app/" />
+  <meta property="twitter:title" content="Weavolution - Transforming Textile Waste Into Opportunity" />
+  <meta property="twitter:description"
+    content="Weavolution tackles Egypt's textile waste problem by transforming discarded fabrics into eco-friendly products. Join the sustainable revolution." />
+  <meta property="twitter:image" content="https://weavolution.vercel.app/og-image.jpg" />
+
+  <!-- Additional SEO -->
+  <meta name="keywords" content="textile waste, recycling, sustainability, Egypt, eco-friendly, green products" />
+  <meta name="author" content="Weavolution" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://weavolution.vercel.app/" />
 </head>
 
 <body>
