--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 -->
   <title>Weavolution - Transforming Textile Waste Into Opportunity</title>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="Icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Weavolution tackles Egypt's textile waste problem by transforming discarded fabrics into eco-friendly products. Join the sustainable revolution." />
